--- a/index.html
+++ b/index.html
@@ -268,36 +268,40 @@
   <section id="reviews" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4">Customer Reviews</h3>
-      <p class="text-base sm:text-lg mb-6">Read what our customers have to say! <span class="font-semibold">(10 Reviews)</span></p>
+      <p class="text-base sm:text-lg mb-6">Read what our customers have to say!</p>
       <div class="relative w-full max-w-4xl mx-auto overflow-hidden">
-        <a href="https://www.restaurantji.com/mo/grovespring/spinners-pizza-/" target="_blank" class="text-tertiary hover:underline">View on Restaurantji</a>
         <div id="review-carousel" class="flex transition-transform duration-1000 ease-in-out">
-          <div class="min-w-full flex-shrink-0 p-6">
-            <div class="bg-white p-6 rounded-md shadow-md h-full flex flex-col">
-              <blockquote class="italic text-base sm:text-lg mb-4 flex-grow">"Had the debris pizza, it was terrific..."</blockquote>
-              <div>
-                <p class="font-semibold">- Bill Kaferstein, September 2024 on Google</p>
-                <div class="mt-2 text-sm">
-                  <p>Atmosphere: 4</p>
-                  <p>Food: 4</p>
-                  <p>Service: 4</p>
-                </div>
-              </div>
+          <!-- Review #1 -->
+          <a href="https://maps.app.goo.gl/pvZE3FwiksYKeBcE6" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
+            <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
+              <p class="italic text-lg">"The food was great! Had a side salad, garlic cheese sticks, and a small deluxe pizza! Everything was super fresh and super tasty! The two young girls that were working were nice and attentive! Would definitely recommend! Stop by if you are close!"</p>
+              <p class="mt-4 font-semibold">- Ashley Alderson, 6 months ago</p>
             </div>
-          </div>
-          <div class="min-w-full flex-shrink-0 p-6">
-            <div class="bg-white p-6 rounded-md shadow-md h-full flex flex-col">
-              <blockquote class="italic text-base sm:text-lg mb-4 flex-grow">"Had a supreme pizza that was delicious."</blockquote>
-              <div>
-                <p class="font-semibold">- Ronnie Long, September 2024 on Google</p>
-                <div class="mt-2 text-sm">
-                  <p>Atmosphere: 3</p>
-                  <p>Food: 5</p>
-                  <p>Service: 4</p>
-                </div>
-              </div>
+          </a>
+
+          <!-- Review #2 -->
+          <a href="https://maps.app.goo.gl/jsMFxSnMSP1J1sbFA" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
+            <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
+              <p class="italic text-lg">"Delicious pizza! The BBQ Chicken bacon ranch pizza was amazing. Great service as well. Will be going back soon."</p>
+              <p class="mt-4 font-semibold">- Charlie Maddux, 4 months ago</p>
             </div>
-          </div>
+          </a>
+
+          <!-- Review #3 -->
+          <a href="https://maps.app.goo.gl/QCYmuxvz9aaXoYar9" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
+            <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
+              <p class="italic text-lg">"The pizza was amazing! If you are looking for a great thin crust pizza! We will be coming back!"</p>
+              <p class="mt-4 font-semibold">- Eva Hlubik, a year ago</p>
+            </div>
+          </a>
+
+          <!-- Review #4 -->
+          <a href="https://maps.app.goo.gl/PFfH7PBL77W7xKK69" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
+            <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
+              <p class="italic text-lg">"This place is awesome! The fried catfish was perfect. The menu selection is so large that everyone will find a favorite."</p>
+              <p class="mt-4 font-semibold">- Elizabeth Meyer, a year ago</p>
+            </div>
+          </a>
         </div>
       </div>
     </div>
