--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <a href="https://maps.app.goo.gl/pvZE3FwiksYKeBcE6" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
             <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
               <p class="italic text-lg">"The food was great! Had a side salad, garlic cheese sticks, and a small deluxe pizza! Everything was super fresh and super tasty! The two young girls that were working were nice and attentive! Would definitely recommend! Stop by if you are close!"</p>
-              <p class="mt-4 font-semibold">- Ashley Alderson, 6 months ago</p>
+              <p class="mt-4 font-semibold">- Ashley Alderson</p>
             </div>
           </a>
 
@@ -283,7 +283,7 @@
           <a href="https://maps.app.goo.gl/jsMFxSnMSP1J1sbFA" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
             <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
               <p class="italic text-lg">"Delicious pizza! The BBQ Chicken bacon ranch pizza was amazing. Great service as well. Will be going back soon."</p>
-              <p class="mt-4 font-semibold">- Charlie Maddux, 4 months ago</p>
+              <p class="mt-4 font-semibold">- Charlie Maddux</p>
             </div>
           </a>
 
@@ -291,7 +291,7 @@
           <a href="https://maps.app.goo.gl/QCYmuxvz9aaXoYar9" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
             <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
               <p class="italic text-lg">"The pizza was amazing! If you are looking for a great thin crust pizza! We will be coming back!"</p>
-              <p class="mt-4 font-semibold">- Eva Hlubik, a year ago</p>
+              <p class="mt-4 font-semibold">- Eva Hlubik</p>
             </div>
           </a>
 
@@ -299,7 +299,7 @@
           <a href="https://maps.app.goo.gl/PFfH7PBL77W7xKK69" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
             <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
               <p class="italic text-lg">"This place is awesome! The fried catfish was perfect. The menu selection is so large that everyone will find a favorite."</p>
-              <p class="mt-4 font-semibold">- Elizabeth Meyer, a year ago</p>
+              <p class="mt-4 font-semibold">- Elizabeth Meyer</p>
             </div>
           </a>
         </div>
