--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <div class="relative w-full max-w-4xl mx-auto overflow-hidden">
         <div id="review-carousel" class="flex transition-transform duration-1000 ease-in-out">
           <!-- Review #1 -->
-          <a href="https://maps.app.goo.gl/pvZE3FwiksYKeBcE6" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
+          <a href="https://maps.app.goo.gl/8FukpDRr5WbMhpGTA" class="w-full flex-shrink-0 flex flex-col items-center justify-center text-center p-6">
             <div class="bg-white p-8 rounded-md shadow-md h-full flex flex-col items-center justify-center">
               <p class="italic text-lg">"The food was great! Had a side salad, garlic cheese sticks, and a small deluxe pizza! Everything was super fresh and super tasty! The two young girls that were working were nice and attentive! Would definitely recommend! Stop by if you are close!"</p>
               <p class="mt-4 font-semibold">- Ashley Alderson</p>
