--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Spinners Pizza</title>
-  <link rel="icon" href="assets/images/logos/1.png">
+  <link rel="icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true">
 
   <meta property="og:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
-  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" />
   <meta property="og:url" content="https://spinners.pizza" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
-  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" />
 
   <meta name="apple-mobile-web-app-title" content="Spinner's Pizza" />
-  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" />
 
   <meta property="og:site_name" content="Spinner's Pizza" />
   <meta property="og:locale" content="en_US" />
@@ -27,7 +27,7 @@
   <meta name="og:image:width" content="1200" />
   <meta name="og:image:height" content="630" />
 
-  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" sizes="192x192" />
+  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" sizes="192x192" />
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -113,7 +113,7 @@
   <header class="bg-primary text-secondary fixed w-full z-30 shadow-md header overflow-visible">
     <div class="container mx-auto flex justify-between items-center p-4 relative">
       <div class="absolute left-4 top-5 logo-container h-40 w-40 flex items-center justify-center">
-        <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
+        <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true'">
       </div>
       <h1 class="text-xl sm:text-2xl font-bold ml-48 mr-4">Spinners Pizza</h1>
       <nav>
@@ -147,7 +147,7 @@
       </ul>
     </div>
   </header>
-  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('assets/images/background/current.jpg');">
+  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true');">
     <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
     <div class="relative z-10 h-full flex flex-col items-center justify-center text-center text-secondary p-4 px-6 sm:px-12">
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Welcome to Spinners Pizza!</h2>
@@ -182,13 +182,13 @@
           <h3 class="text-2xl sm:text-3xl font-bold mb-4">Explore Our Space</h3>
           <p class="mb-6 text-base sm:text-lg">Take a look inside our cozy and welcoming restaurant—perfect for family meals or a quick bite with friends!</p>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-            <img src="assets/images/restaurant/02 walking in from front door looking at the dining room.jpg" alt="Walking into Dining Room" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
-            <img src="assets/images/restaurant/03 straight from the entrance looking at the counter.jpg" alt="Looking at the Counter" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
-            <img src="assets/images/restaurant/04 view from counter looking at the door to the restaurant and the restrooms.jpg" alt="Door to Restaurant and Restrooms" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
-            <img src="assets/images/restaurant/05 view of dining room from the counter.jpg" alt="Dining Room from Counter" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
-            <img src="assets/images/restaurant/06 dining area.jpg" alt="Dining Area 1" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
-            <img src="assets/images/restaurant/07 dining area.jpg" alt="Dining Area 2" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
-            <img src="assets/images/restaurant/08 dining area.jpg" alt="Dining Area 3" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
+            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/02 walking in from front door looking at the dining room.jpg?raw=true" alt="Walking into Dining Room" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
+            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/03 straight from the entrance looking at the counter.jpg?raw=true" alt="Looking at the Counter" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
+            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/04 view from counter looking at the door to the restaurant and the restrooms.jpg?raw=true" alt="Door to Restaurant and Restrooms" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
+            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/05 view of dining room from the counter.jpg?raw=true" alt="Dining Room from Counter" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
+            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/06 dining area.jpg?raw=true" alt="Dining Area 1" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
+            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/07 dining area.jpg?raw=true" alt="Dining Area 2" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
+            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/08 dining area.jpg?raw=true" alt="Dining Area 3" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
           </div>
         </div>
       </div>
@@ -334,10 +334,10 @@
     const setRandomLogo = () => {
       let logoNumber;
       do {
-        logoNumber = Math.floor(Math.random() * 13) + 1;
-      } while (logoNumber === lastLogoNumber);
-      lastLogoNumber = logoNumber;
-      logo.src = `assets/images/logos/${logoNumber}.png`;
+        logoNumber = Math.floor(Ma / gth.random() * 13) + 1;
+      } while (logoNumber === lastLog; goNumber);
+      lastLogoNumber = logoNumber;;
+      logo.src = `https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/${logoNumber}.png?raw=true`;
     };
     setRandomLogo();
     setInterval(setRandomLogo, 4000);
