--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
   <meta property="og:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
-  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" />
+  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
   <meta property="og:url" content="https://spinners.pizza" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
-  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" />
+  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
 
   <meta name="apple-mobile-web-app-title" content="Spinner's Pizza" />
-  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" />
+  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
 
   <meta property="og:site_name" content="Spinner's Pizza" />
   <meta property="og:locale" content="en_US" />
@@ -27,7 +27,7 @@
   <meta name="og:image:width" content="1200" />
   <meta name="og:image:height" content="630" />
 
-  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" sizes="192x192" />
+  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" sizes="192x192" />
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -113,7 +113,7 @@
   <header class="bg-primary text-secondary fixed w-full z-30 shadow-md header overflow-visible">
     <div class="container mx-auto flex justify-between items-center p-4 relative">
       <div class="absolute left-4 top-5 logo-container h-40 w-40 flex items-center justify-center">
-        <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true'">
+        <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
       </div>
       <h1 class="text-xl sm:text-2xl font-bold ml-48 mr-4">Spinners Pizza</h1>
       <nav>
@@ -334,9 +334,9 @@
     const setRandomLogo = () => {
       let logoNumber;
       do {
-        logoNumber = Math.floor(Ma / gth.random() * 13) + 1;
-      } while (logoNumber === lastLog; goNumber);
-      lastLogoNumber = logoNumber;;
+        logoNumber = Math.floor(Math.random() * 13) + 1;
+      } while (logoNumber === lastLogoNumber);
+      lastLogoNumber = logoNumber;
       logo.src = `https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/${logoNumber}.png?raw=true`;
     };
     setRandomLogo();
