--- a/index.html
+++ b/index.html
@@ -9,25 +9,47 @@
 
   <meta property="og:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
-  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
+  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
   <meta property="og:url" content="https://spinners.pizza" />
   <meta property="og:type" content="website" />
-
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
-  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
-
+  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
   <meta name="apple-mobile-web-app-title" content="Spinner's Pizza" />
-  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
-
+  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
   <meta property="og:site_name" content="Spinner's Pizza" />
   <meta property="og:locale" content="en_US" />
-
   <meta name="og:image:width" content="1200" />
   <meta name="og:image:height" content="630" />
 
-  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" sizes="192x192" />
+  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" sizes="192x192" />
+
+  <meta name="description" content="Spinner's Pizza offers a variety of delicious pizzas, BBQ, and burgers in Grovespring, MO. Experience great food and service!" />
+  <meta name="keywords" content="pizza, restaurant, Spinners Pizza, Grovespring, delicious pizzas, BBQ, burgers, family-friendly" />
+  <meta name="author" content="Spinners Pizza" />
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Restaurant",
+      "name": "Spinner's Pizza",
+      "description": "Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!",
+      "image": "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true",
+      "telephone": "(417) 462-7746",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "9537 MO-5",
+        "addressLocality": "Grovespring",
+        "addressRegion": "MO",
+        "postalCode": "65662",
+        "addressCountry": "US"
+      },
+      "url": "https://spinners.pizza",
+      "openingHours": "Mo-Su 11:00-20:00",
+      "priceRange": "$$"
+    }
+  </script>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
