--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
   <section id="about" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4">About Spinners Pizza</h3>
+<div class="flex justify-center">
+  <img 
+    src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.jpg?raw=true" 
+    alt="Spinners Pizza Logo" 
+    class="rounded-md shadow-md mx-auto block" 
+    onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
+</div>
       <p class="text-base sm:text-lg">At Spinners Pizza, our passion is crafting delicious pizzas and other menu items with the finest ingredients. Our commitment to quality and community drives us to serve you every day.</p>
       <p class="mt-4 text-base sm:text-lg">We proudly offer discounts to our heroes – service members, police officers, firefighters, and first responders – as a thank you for their dedication.</p>
     </div>
