--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 
   <meta property="og:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
-  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
   <meta property="og:url" content="https://spinners.pizza" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
-  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
   <meta name="apple-mobile-web-app-title" content="Spinner's Pizza" />
-  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" />
   <meta property="og:site_name" content="Spinner's Pizza" />
   <meta property="og:locale" content="en_US" />
   <meta name="og:image:width" content="1200" />
   <meta name="og:image:height" content="630" />
 
-  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" sizes="192x192" />
+  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" sizes="192x192" />
 
   <meta name="description" content="Spinner's Pizza offers a variety of delicious pizzas, BBQ, and burgers in Grovespring, MO. Experience great food and service!" />
   <meta name="keywords" content="pizza, restaurant, Spinners Pizza, Grovespring, delicious pizzas, BBQ, burgers, family-friendly" />
@@ -133,9 +133,9 @@
 
 <body class="bg-gray-100 text-gray-800">
   <header class="bg-primary text-secondary fixed w-full z-30 shadow-md header overflow-visible">
-    <div class="container mx-auto flex justify-between items-center p-4 relative">
-      <div class="absolute left-4 top-5 logo-container h-40 w-40 flex items-center justify-center">
-        <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
+    <div class="container mx-auto flex justify-between items-center p-4 relative ">
+      <div class="absolute left-4 top-5 logo-container h-40 w-40 flex items-center justify-center  animate-rotate">
+        <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
       </div>
       <h1 class="text-xl sm:text-2xl font-bold ml-48 mr-4">Spinners Pizza</h1>
       <nav>
@@ -180,13 +180,6 @@
   <section id="about" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4">About Spinners Pizza</h3>
-<div class="flex justify-center">
-  <img 
-    src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.jpg?raw=true" 
-    alt="Spinners Pizza Logo" 
-    class="rounded-md shadow-md mx-auto block" 
-    onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
-</div>
       <p class="text-base sm:text-lg">At Spinners Pizza, our passion is crafting delicious pizzas and other menu items with the finest ingredients. Our commitment to quality and community drives us to serve you every day.</p>
       <p class="mt-4 text-base sm:text-lg">We proudly offer discounts to our heroes – service members, police officers, firefighters, and first responders – as a thank you for their dedication.</p>
     </div>
@@ -368,8 +361,8 @@
       lastLogoNumber = logoNumber;
       logo.src = `https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/${logoNumber}.png?raw=true`;
     };
-    setRandomLogo();
-    setInterval(setRandomLogo, 4000);
+    //setRandomLogo();
+    //setInterval(setRandomLogo, 4000);
     const menuButton = document.getElementById('mobile-menu-button');
     const mobileMenu = document.getElementById('mobile-menu');
     menuButton.addEventListener('click', (e) => {
